Fix foodlog body / get meal by user
